# SO2_Project

./: CMakeLists.txt
src/: ball.cpp  ball.h  glad.c  main.cpp  rectangle.cpp  rectangle.h  temp.cpp
